tests/miniJava/neg/004334_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public class int [] java ( ) { return 0 ; } }
